[gd_scene load_steps=12 format=3 uid="uid://dvd8rhrt3vyya"]

[ext_resource type="Script" path="res://module_customizer.gd" id="1_8enqt"]
[ext_resource type="Texture2D" uid="uid://qp080225pbn5" path="res://assets/new_file.png" id="2_7qkqo"]
[ext_resource type="Texture2D" uid="uid://cs10vxbbpu1jl" path="res://assets/save.png" id="2_iyutp"]
[ext_resource type="Texture2D" uid="uid://dohioa3qjg5gi" path="res://assets/sav.png" id="3_67ln0"]
[ext_resource type="Texture2D" uid="uid://dmfud6q8l0epf" path="res://assets/open-folder.png" id="4_8vb82"]
[ext_resource type="PackedScene" uid="uid://byvnmkd1is7en" path="res://type_selector.tscn" id="4_s6sgc"]
[ext_resource type="PackedScene" uid="uid://dgkwqxiefn2av" path="res://shape_edit.tscn" id="5_4cyb1"]
[ext_resource type="Script" path="res://module_customizer_shield_properties.gd" id="7_s67sk"]
[ext_resource type="PackedScene" uid="uid://cy3v2xd66to72" path="res://move_attack_preview.tscn" id="8_i5g7s"]
[ext_resource type="Script" path="res://module_customizer_weapon_properties.gd" id="8_ivr8x"]
[ext_resource type="PackedScene" uid="uid://xvhld5juy87e" path="res://weapon_push_edit.tscn" id="9_jsuhl"]

[node name="module_customizer" type="VBoxContainer"]
custom_minimum_size = Vector2(663, 613)
offset_right = 536.0
offset_bottom = 350.0
mouse_filter = 2
script = ExtResource("1_8enqt")

[node name="title" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="folder" type="Button" parent="title"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Open Save Location"
icon = ExtResource("4_8vb82")
expand_icon = true

[node name="title" type="PanelContainer" parent="title"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="title/title"]
layout_mode = 2
text = "Module Customizer"
horizontal_alignment = 1

[node name="batch_save" type="Button" parent="title"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Save all changes to file"
icon = ExtResource("3_67ln0")
expand_icon = true

[node name="save" type="Button" parent="title"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Save Edits"
disabled = true
icon = ExtResource("2_iyutp")
expand_icon = true

[node name="sizing" type="MarginContainer" parent="title"]
custom_minimum_size = Vector2(323, 40)
layout_mode = 2
mouse_filter = 2

[node name="sel_op" type="OptionButton" parent="title/sizing"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 0)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_color = Color(0, 0, 0, 0)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/font_focus_color = Color(0, 0, 0, 0)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)

[node name="Label" type="Label" parent="title/sizing"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="new" type="Button" parent="title"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "New Module"
icon = ExtResource("2_7qkqo")
expand_icon = true

[node name="h" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="types" type="VBoxContainer" parent="h"]
layout_mode = 2
size_flags_horizontal = 3

[node name="super" parent="h/types" instance=ExtResource("4_s6sgc")]
custom_minimum_size = Vector2(124, 0)
layout_mode = 2

[node name="sub" parent="h/types" instance=ExtResource("4_s6sgc")]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
supertype = 1

[node name="l" type="VBoxContainer" parent="h"]
layout_mode = 2
mouse_filter = 2

[node name="shape_edit" parent="h/l" instance=ExtResource("5_4cyb1")]
layout_mode = 2
size_flags_vertical = 0

[node name="r" type="VBoxContainer" parent="h"]
custom_minimum_size = Vector2(216, 0)
layout_mode = 2
mouse_filter = 2

[node name="move_atk" parent="h/r" instance=ExtResource("8_i5g7s")]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="h/r"]
layout_mode = 2
text = "Name :"
horizontal_alignment = 1

[node name="name" type="LineEdit" parent="h/r"]
layout_mode = 2
placeholder_text = "Module Name"

[node name="HBoxContainer" type="HBoxContainer" parent="h/r"]
layout_mode = 2

[node name="shield" type="GridContainer" parent="h/r"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
columns = 2
script = ExtResource("7_s67sk")

[node name="s_l" type="Label" parent="h/r/shield"]
layout_mode = 2
text = "Start :"
horizontal_alignment = 2

[node name="start" type="SpinBox" parent="h/r/shield"]
layout_mode = 2
max_value = 2.0
rounded = true

[node name="c_l" type="Label" parent="h/r/shield"]
layout_mode = 2
text = "Capacity :"
horizontal_alignment = 2

[node name="cap" type="SpinBox" parent="h/r/shield"]
layout_mode = 2
max_value = 2.0
rounded = true

[node name="sp_l" type="Label" parent="h/r/shield"]
layout_mode = 2
text = "Regeneration :"
horizontal_alignment = 2

[node name="regen" type="SpinBox" parent="h/r/shield"]
layout_mode = 2
max_value = 2.0
rounded = true

[node name="weapon" type="VBoxContainer" parent="h/r"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
script = ExtResource("8_ivr8x")

[node name="armor_p" type="HBoxContainer" parent="h/r/weapon"]
layout_mode = 2

[node name="l" type="Label" parent="h/r/weapon/armor_p"]
layout_mode = 2
text = "Armor Piercing : "
horizontal_alignment = 2

[node name="toggle" type="CheckButton" parent="h/r/weapon/armor_p"]
layout_mode = 2
size_flags_horizontal = 2

[node name="shield_p" type="HBoxContainer" parent="h/r/weapon"]
layout_mode = 2

[node name="l" type="Label" parent="h/r/weapon/shield_p"]
layout_mode = 2
text = "Shield Piercing : "
horizontal_alignment = 2

[node name="toggle" type="CheckButton" parent="h/r/weapon/shield_p"]
layout_mode = 2
size_flags_horizontal = 2

[node name="use_reflect" type="HBoxContainer" parent="h/r/weapon"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="l" type="Label" parent="h/r/weapon/use_reflect"]
layout_mode = 2
text = "Use Relfected Positions :"
horizontal_alignment = 2

[node name="m" type="MarginContainer" parent="h/r/weapon/use_reflect"]
layout_mode = 2
theme_override_constants/margin_left = -7
theme_override_constants/margin_right = -7

[node name="toggle" type="CheckButton" parent="h/r/weapon/use_reflect/m"]
layout_mode = 2
size_flags_horizontal = 2

[node name="priority" type="HBoxContainer" parent="h/r/weapon"]
layout_mode = 2

[node name="l" type="Label" parent="h/r/weapon/priority"]
layout_mode = 2
text = "Priority :"
horizontal_alignment = 2

[node name="val" type="SpinBox" parent="h/r/weapon/priority"]
layout_mode = 2
min_value = 1.0
max_value = 20.0
value = 1.0
rounded = true

[node name="push" parent="h/r/weapon" instance=ExtResource("9_jsuhl")]
layout_mode = 2

[connection signal="pressed" from="title/folder" to="." method="_on_folder_pressed"]
[connection signal="pressed" from="title/batch_save" to="." method="_on_batch_save_pressed"]
[connection signal="pressed" from="title/save" to="." method="_on_save_pressed"]
[connection signal="item_selected" from="title/sizing/sel_op" to="." method="_on_sel_op_item_selected"]
[connection signal="pressed" from="title/new" to="." method="_on_new_pressed"]
[connection signal="type_selected" from="h/types/super" to="." method="_on_super_type_selected"]
[connection signal="type_selected" from="h/types/super" to="h/types/sub" method="_set_super"]
[connection signal="type_selected" from="h/types/sub" to="." method="_on_sub_type_selected"]
[connection signal="shape_changed" from="h/l/shape_edit" to="." method="_on_shape_edit_shape_changed"]
[connection signal="text_changed" from="h/r/name" to="." method="_on_name_text_changed"]
[connection signal="dir_changed" from="h/r/weapon/push" to="h/r/move_atk" method="_on_push_dir_changed"]
